--- a/html/index.css
+++ b/html/index.css
@@ -1,9 +1,26 @@
 /*index.css*/
 
+html { 
+  background: url(../images/bg_3.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+h1 {
+	font-family: 'Lato', sans-serif;
+	font-weight: 100;
+	font-style: italic;
+	font-size: 90px;
+	color: white;
+}
+
 #container 
 {
 	width:1080px;
-	margin:auto;
+	height: auto;
+	margin: auto;
 }
 
 #title
@@ -11,12 +28,12 @@
 	width:100%;
 	height:100px;
 	margin-bottom:20px;
-	padding-top:50px;
+	padding-top:0px;
+	padding-bottom: 5px;
+
 	background:rgba(255, 255, 255, 0.2);;
-	opacity: 30;
+
 	text-align:center;
-	color:#ffffff;
-	font-size:45px;
 }
 
 #sidebar 
@@ -25,7 +42,6 @@
 	height:400px;
 	float:left;
 	background:rgba(255, 255, 255, 0.2);;
-	opacity: 30;
 }
 
 #content
@@ -34,5 +50,4 @@
 	height:700px;
 	float:right;
 	background:rgba(255, 255, 255, 0.2);;
-	opacity: 30;
 }
