--- a/html/index.css
+++ b/html/index.css
@@ -16,71 +16,105 @@ h1 {
 	font-style: italic;
 	font-size: 90px;
 	color: white;
+
+	margin: 0px;
+}
+
+p {
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
+	/*font-style: italic;*/
+	font-size: x-large;
+	color: white;
+
+	margin: 0px;
 }
 
 .blur {
+	/*Position and Sizing*/
+	width: 100%;
+    height: 100%;
+    position: relative;
+
+    margin: 0px;
+
+    z-index: -1;
+
+    /*Background*/
 	background: url(../images/bg_4.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
 
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
 
-	background-color: rgba(0, 255, 0, 0.1);
-	filter: blur(10px);
-	-webkit-filter: blur(10px);
-	-moz-filter: blur(10px);
-	-o-filter: blur(10px);
-	-ms-filter: blur(10px);
-	
-	z-index: -1;
-
-	overflow: none;
+	/*Filters*/
+	filter: blur(15px);
+	-webkit-filter: blur(15px);
+	-moz-filter: blur(15px);
+	-o-filter: blur(15px);
+	-ms-filter: blur(15px);
 }
 
 #container 
 {
 	width:1080px;
+
 	height: auto;
 	margin: auto;
 }
 
-#title
+#titleContainer
 {
 	width:100%;
 	height:100px;
+	position: relative;
+
 	margin-bottom:20px;
+
 	padding-top:0px;
 	padding-bottom: 5px;
 
-	background:rgba(255, 255, 255, 0.2);;
-
 	text-align:center;
+
+
+}
+
+.content
+{
+	width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background:rgba(255, 255, 255, 0.15);
+    border-radius: 20px;
 
 	z-index: 52;
 }
 
-#sidebar 
+#sidebarContainer 
 {
 	width:150px;
 	height:400px;
+	position: relative;
 	float:left;
-	background:rgba(255, 255, 255, 0.2);
+	/*background:rgba(255, 255, 255, 0.9);*/
 
 	z-index: 52;
 }
 
-#content
+#contentContainer
 {
 	width:900px;
 	height:700px;
+	position: relative;
+
+	margin-bottom: 40px;
+
 	float:right;
-	background:rgba(255, 255, 255, 0.2);
+	/*background:rgba(255, 255, 255, 0.2);*/
 
 	z-index: 52;
 }
