--- a/html/index.css
+++ b/html/index.css
@@ -1,13 +1,12 @@
 /*index.css*/
 
-html { 
-  background: url(../images/bg_4.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
-  /*z-index: 12;*/
+html {
+	/*background*/
+	background: url(../images/bg_4.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 h1 {
@@ -23,7 +22,6 @@ h1 {
 p {
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
-	/*font-style: italic;*/
 	font-size: x-large;
 	color: white;
 
@@ -49,35 +47,11 @@ p {
 
 
 	/*Filters*/
-	filter: blur(15px);
-	-webkit-filter: blur(15px);
-	-moz-filter: blur(15px);
-	-o-filter: blur(15px);
-	-ms-filter: blur(15px);
-}
-
-#container 
-{
-	width:1080px;
-
-	height: auto;
-	margin: auto;
-}
-
-#titleContainer
-{
-	width:100%;
-	height:100px;
-	position: relative;
-
-	margin-bottom:20px;
-
-	padding-top:0px;
-	padding-bottom: 5px;
-
-	text-align:center;
-
-
+	filter: blur(15px) brightness(.5);
+	-webkit-filter: blur(15px) saturate(105%) brightness(1.2) ;
+	/*-moz-filter: blur(15px) brightness(0.5);
+	-o-filter: blur(15px) brightness(0.5);
+	-ms-filter: blur(15px) brightness(0.5);*/
 }
 
 .content
@@ -89,15 +63,36 @@ p {
     left: 0;
 
     background:rgba(255, 255, 255, 0.15);
-    border-radius: 20px;
 
 	z-index: 52;
 }
 
+#mainContainer 
+{
+	width:90%;
+	height: auto;
+	margin: auto;
+}
+
+#titleContainer
+{
+	width:88%;
+	height:100px;
+	position: relative;
+	/*float: right;*/
+	margin-left: 12%;
+	margin-bottom:20px;
+
+	padding-top:0px;
+	padding-bottom: 5px;
+
+	text-align:center;
+}
+
 #sidebarContainer 
 {
-	width:150px;
-	height:400px;
+	width:10%;
+	height:100px;
 	position: relative;
 	float:left;
 	/*background:rgba(255, 255, 255, 0.9);*/
@@ -107,8 +102,8 @@ p {
 
 #contentContainer
 {
-	width:900px;
-	height:700px;
+	width:88%;
+	height:500px;
 	position: relative;
 
 	margin-bottom: 40px;
