--- a/html/index.css
+++ b/html/index.css
@@ -2,11 +2,15 @@
 
 html {
 	/*background*/
-	background: url(../images/bg_4.jpg) no-repeat center center fixed; 
+	background: url(../images/bg_3.jpg) no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+}
+
+body{
+	margin: 0;
 }
 
 h1 {
@@ -34,12 +38,13 @@ p {
     height: 100%;
     position: relative;
 
+    /*Margins and Padding*/
     margin: 0px;
 
     z-index: -1;
 
     /*Background*/
-	background: url(../images/bg_4.jpg) no-repeat center center fixed;
+	background: url(../images/bg_3.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -79,9 +84,11 @@ p {
 	width:88%;
 	height:100px;
 	position: relative;
-	/*float: right;*/
+
+	/*Margins and Padding*/
+	margin-top: 2%;
 	margin-left: 12%;
-	margin-bottom:20px;
+	margin-bottom: 20px;
 
 	padding-top:0px;
 	padding-bottom: 5px;
@@ -95,7 +102,6 @@ p {
 	height:100px;
 	position: relative;
 	float:left;
-	/*background:rgba(255, 255, 255, 0.9);*/
 
 	z-index: 52;
 }
@@ -103,10 +109,11 @@ p {
 #contentContainer
 {
 	width:88%;
-	height:500px;
+	height:600px;
 	position: relative;
 
-	margin-bottom: 40px;
+	/*Margins and Padding*/
+	margin-bottom: 5%;
 
 	float:right;
 	/*background:rgba(255, 255, 255, 0.2);*/
