--- a/html/index.css
+++ b/html/index.css
@@ -14,22 +14,25 @@ body{
 }
 
 h1 {
+	margin: 0px;
+
 	font-family: 'Lato', sans-serif;
 	font-weight: 100;
 	font-style: italic;
 	font-size: 90px;
 	color: white;
 
-	margin: 0px;
+	text-shadow:0 0 0 transparent, 1px 1px 3px rgba(0,0,0,1.0);
 }
 
 p {
+	margin: 0px;
+
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	font-size: x-large;
 	color: white;
-
-	margin: 0px;
+	text-shadow:0 0 0 transparent, 1px 1px 3px rgba(0,0,0,0.8)
 }
 
 .blur {
@@ -49,7 +52,6 @@ p {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-
 
 	/*Filters*/
 	filter: blur(15px) brightness(.5);
