--- a/html/index.css
+++ b/html/index.css
@@ -1,38 +1,151 @@
 /*index.css*/
 
-#container 
-{
-	width:1080px;
-	margin:auto;
+html {
+	/*background*/
+	background: url(../images/bg_3.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
-#title
+body{
+	margin: 0;
+}
+
+h1 {
+	margin: 0px;
+
+	/*Font Styling*/
+	font-family: 'Lato', sans-serif;
+	font-weight: 100;
+	font-style: italic;
+	font-size: 90px;
+
+	/*Color and themeing*/
+	color: white;
+	text-shadow:0 0 0 transparent, 1px 1px 3px rgba(0,0,0,1.0);
+}
+
+p {
+	margin: 0px;
+
+	/*Font Styling*/
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
+	font-size: x-large;
+
+	/*Color and themeing*/
+	color: white;
+	text-shadow:0 0 0 transparent, 1px 1px 3px rgba(0,0,0,0.8) 
+}
+
+a {
+	margin: 0px;
+
+	/*Font Styling*/
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
+	font-size: x-large;
+
+	/*Color and themeing*/
+	color: white;
+	text-shadow:0 0 0 transparent, 1px 1px 3px rgba(0,0,0,0.8) 
+}
+
+.blur {
+	/*Position and Sizing*/
+	width: 100%;
+    height: 100%;
+    position: relative;
+
+    /*Margins and Padding*/
+    margin: 0px;
+
+    z-index: -1;
+
+    /*Background*/
+	background: url(../images/bg_3_blur.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+
+	/*Filters*/
+	filter: blur(15px) brightness(.5);
+	/*-webkit-filter: blur(30px) saturate(105%) brightness(1.2);*/
+	-webkit-filter: saturate(105%) brightness(1.2);
+	/*-moz-filter: blur(15px) brightness(0.5);
+	-o-filter: blur(15px) brightness(0.5);
+	-ms-filter: blur(15px) brightness(0.5);*/
+}
+
+.content
 {
-	width:100%;
-	height:100px;
-	margin-bottom:20px;
-	padding-top:50px;
-	background:rgba(255, 255, 255, 0.2);;
-	opacity: 30;
+	width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background:rgba(255, 255, 255, 0.15);
+
+	z-index: 52;
+}
+
+#mainContainer 
+{
+	width:90%;
+	min-width: 600px;
+	max-width: 2000px;
+	height: auto;
+	margin: auto;
+}
+
+#titleContainer
+{
+	width:88%;
+	height:110px;
+	min-width: 450px;
+	min-height: 110px;
+	position: relative;
+
+	/*Margins and Padding*/
+	margin-top: 2%;
+	margin-left: 12%;
+	margin-bottom: 20px;
+
+	padding-top:0px;
+	padding-bottom: 0px;
+
 	text-align:center;
-	color:#ffffff;
-	font-size:45px;
 }
 
-#sidebar 
+#sidebarContainer 
 {
-	width:150px;
-	height:400px;
+	width:10%;
+	height:600px;
+	min-width: 70px;
+	max-width: 90px;
+	position: relative;
 	float:left;
-	background:rgba(255, 255, 255, 0.2);;
-	opacity: 30;
+
+	z-index: 52;
 }
 
-#content
+#contentContainer
 {
-	width:900px;
-	height:700px;
+	width:88%;
+	height:600px;
+	min-width: 450px;
+	max-height: 800px;
+	position: relative;
+
+	/*Margins and Padding*/
+	margin-bottom: 5%;
+
 	float:right;
-	background:rgba(255, 255, 255, 0.2);;
-	opacity: 30;
+	/*background:rgba(255, 255, 255, 0.2);*/
+
+	z-index: 52;
 }
