--- a/html/coolSites.css
+++ b/html/coolSites.css
@@ -2,23 +2,50 @@
 
 /*coolSites.css*/
 
-#container 
-{
-	width:1080px;
-	margin:auto;
+html {
+  /*background*/
+  background: url(../images/bg_3.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-#title
+body{
+  margin: 0;
+}
+
+.blur {
+  /*Position and Sizing*/
+  width: 100%;
+    height: 100%;
+    position: relative;
+
+    /*Margins and Padding*/
+    margin: 0px;
+
+    z-index: -1;
+
+    /*Background*/
+  background: url(../images/bg_3_blur.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+  /*Filters*/
+  filter: blur(15px) brightness(.5);
+  -webkit-filter: saturate(105%) brightness(1.2);
+
+}
+
+#mainContainer 
 {
-	width:100%;
-	height:100px;
-	margin-bottom:20px;
-	padding-top:50px;
-	background:rgba(255, 255, 255, 0.2);
-	opacity: 30;
-	text-align:center;
-	color:#ffffff;
-	font-size:45px;
+  width:90%;
+  min-width: 600px;
+  max-width: 2000px;
+  height: auto;
+  margin: auto;
 }
 
 #sidebar 
@@ -30,35 +57,35 @@
 	opacity: 30;
 }
 
-#content
+#contentContainer
 {
 	width:900px;
 	height:700px;
 	float:right;
 	background:rgba(255, 255, 255, 0.2);
 	opacity: 30;
-}
+}                            
+    
+.content
+{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 
-/*#grid {                             
-  	float: left;                      
-  	width: 960px;                     
-  	margin: 0;                        
-  	padding: 0;                       
-  	background: white;                
-  	}  */                               
-                                      
-  .block {                            
+    background:rgba(255, 255, 255, 0.15);
+
+    z-index: 52;
+}            
+                      
+.block {                            
     position: absolute;               
     /*border: 1px solid white; */
     background:rgba(255, 255, 255, 0.2);
-	opacity: 80;         
-    }                                 
-                                      
-  .inner {                            
-    height: 100%;                     
-    width: 100%;                      
-    }                                 
-                                      
+	  opacity: 80;         
+}                                 
+                                                                      
   .s1x1 {                             
     height: 150px;                    
     width: 150px;                     
