--- a/html/index.css
+++ b/html/index.css
@@ -1,7 +1,27 @@
 /*index.css*/
 
+@-webkit-keyframes changeSat {
+	0% {
+		-webkit-filter: saturate(100%) brightness(100%);
+	}
+	100% {
+		-webkit-filter: saturate(200%) brightness(200%);
+	}
+}
+
+@-webkit-keyframes changeSatBack {
+	0% {
+		-webkit-filter: saturate(200%) brightness(200%);
+	}
+	100% {
+		-webkit-filter: saturate(100%) brightness(100%);
+	}
+}
+
+
 html {
 	/*background*/
+	background-color: black;
 	background: url(../images/bg_3.jpg) no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -11,6 +31,11 @@ html {
 
 body{
 	margin: 0;
+}
+
+img{
+	min-width: 100%;
+	min-height: 100%;
 }
 
 h1 {
@@ -48,16 +73,41 @@ a {
 	font-weight: 300;
 	font-size: x-large;
 
+	text-decoration: none;
+
 	/*Color and themeing*/
 	color: white;
-	text-shadow:0 0 0 transparent, 1px 1px 3px rgba(0,0,0,0.8) 
+	text-shadow:0 0 0 transparent, 1px 1px 3px rgba(0,0,0,0.8);
+
+	/*Transition and Animation*/
+	-webkit-transition: 0.5s ease;
+}
+
+	a:link{
+
+	}
+
+	a:visited{
+		/*Color and themeing*/
+		/*color: yellow;*/
+
+		/*Transition and Animation*/
+		-webkit-transition: 0.5s ease;
+	}
+
+	a:hover{
+		/*Color and themeing*/
+		/*color: rgba(255, 255, 220, 1.0);*/
+
+		/*Transition and Animation*/
+		-webkit-transition: 0.5s ease;
 }
 
 .blur {
 	/*Position and Sizing*/
 	width: 100%;
     height: 100%;
-    position: relative;
+    position: absolute;
 
     /*Margins and Padding*/
     margin: 0px;
@@ -65,20 +115,23 @@ a {
     z-index: -1;
 
     /*Background*/
-	background: url(../images/bg_3_blur.jpg) no-repeat center center fixed;
+	background: url(../images/bg_3_blur2.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
 
 	/*Filters*/
-	filter: blur(15px) brightness(.5);
-	/*-webkit-filter: blur(30px) saturate(105%) brightness(1.2);*/
+	filter: saturate(105%) brightness(1.2);
+	/*-webkit-filter: saturate(105%) brightness(1.2);*/
 	-webkit-filter: saturate(105%) brightness(1.2);
-	/*-moz-filter: blur(15px) brightness(0.5);
-	-o-filter: blur(15px) brightness(0.5);
-	-ms-filter: blur(15px) brightness(0.5);*/
+	/*-moz-filter: saturate(105%) brightness(1.2);
+	-o-filter: saturate(105%) brightness(1.2);
+	-ms-filter: saturate(105%) brightness(1.2);*/
 }
+	.blur:hover{
+		/*-webkit-filter: saturate(250%) brightness(2.0);*/
+	}
 
 .content
 {
@@ -88,18 +141,40 @@ a {
     top: 0;
     left: 0;
 
-    background:rgba(255, 255, 255, 0.15);
+    background:rgba(255, 255, 255, 0.25);
 
 	z-index: 52;
+
+	overflow: hidden;
 }
+	.content:hover
+	{
+		
+	}
 
 #mainContainer 
+{
+	width: 100%;
+	height: 100%;
+
+	position: absolute;
+
+	margin: 0;
+	top: 0;
+	left: 0;
+
+	overflow: hidden;
+}
+
+#layoutContainer 
 {
 	width:90%;
 	min-width: 600px;
 	max-width: 2000px;
 	height: auto;
 	margin: auto;
+
+	overflow: hidden;
 }
 
 #titleContainer
@@ -119,24 +194,66 @@ a {
 	padding-bottom: 0px;
 
 	text-align:center;
+
+	overflow: hidden;
 }
 
 #sidebarContainer 
 {
 	width:10%;
-	height:600px;
-	min-width: 70px;
-	max-width: 90px;
+	height:300px;
+	min-width: 100px;
+	max-width: 130px;
 	position: relative;
 	float:left;
 
 	z-index: 52;
+
+	overflow: hidden;
+}
+	#sidebarContainer > .content{
+		height: 70%;
+	}
+
+.sidebarElement
+{
+	background-color: rgba(255, 255, 255, 0.25);
+
+	text-align: center;
+
+	padding-left: 10px;
+	padding-right: 45px;
+	-webkit-transition: 0.75s ease;
+}
+
+	.sidebarElement:hover
+	{
+		background:rgba(100, 200, 255, 0.6);
+		-webkit-transition: 0.75s ease;
+	}
+
+#google:hover
+{
+	background:rgba(241, 181, 15, 0.6);
+	-webkit-transition: 0.75s ease;
+}
+
+#facebook:hover
+{
+	background:rgba(59, 89, 152, 0.6);
+	-webkit-transition: 0.75s ease;
+}
+
+#yahoo:hover
+{
+	background:rgba(123, 0, 153, 0.6);
+	-webkit-transition: 0.75s ease;
 }
 
 #contentContainer
 {
 	width:88%;
-	height:600px;
+	height:300px;
 	min-width: 450px;
 	max-height: 800px;
 	position: relative;
@@ -145,7 +262,8 @@ a {
 	margin-bottom: 5%;
 
 	float:right;
-	/*background:rgba(255, 255, 255, 0.2);*/
 
 	z-index: 52;
+
+	overflow: hidden;
 }
