--- a/html/index.css
+++ b/html/index.css
@@ -47,6 +47,7 @@
 html {
 	/*background*/
 	background-color: black;
+	-webkit-font-smoothing: antialiased;
 /*	background: url(../images/bg_5.jpg) no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -307,7 +308,7 @@ a {
 #sidebarContainer 
 {
 	width:10%;
-	height:300px;
+	height:600px;
 	min-width: 100px;
 	max-width: 130px;
 	position: relative;
@@ -326,6 +327,7 @@ a {
 	background-color: rgba(255, 255, 255, 0.25);
 
 	text-align: center;
+	font-weight: 300;
 
 	padding-left: 10px;
 	padding-right: 45px;
@@ -375,7 +377,7 @@ a {
 #contentContainer
 {
 	width:88%;
-	height:300px;
+	height:600px;
 	min-width: 450px;
 	max-height: 800px;
 	position: relative;
